# iRC_ROS

./: .gitignore  .pre-commit-config.yaml  Doxyfile  LICENSE  README.md  irc_ros.repos
irc_ros_bringup/: CMakeLists.txt  README.md  package.xml
irc_ros_bringup/config/: controller_cpr_platform_medium.yaml  controller_cpr_platform_medium_namespace_1.yaml  controller_dio_module.yaml  controller_igus_rebel_4dof.yaml  controller_igus_rebel_6dof.yaml  controller_igus_rebel_6dof_namespace_1.yaml  controller_igus_robolink_rl_dp_5.yaml  controller_rebel_on_platform.yaml  controller_two_igus_rebel_6dof_second.yaml
irc_ros_bringup/launch/: additional_controllers.launch.py  additional_controllers_pltfrm.launch.py  cpr_platform.launch.py  cpr_platform_debug.launch.py  cpr_platform_mini.launch.py  rebel.launch.py  rebel_debug.launch.py  rebel_on_platform.launch.py  rebel_on_platform_debug.launch.py  rebel_platform_single_description.launch.py  robolink_dp_rl_5.launch.py  robolink_rl_dp_5.launch.py  sick_s300_2.launch.py  sick_s300_2_two_scanners_merged.launch.py  two_rebels.launch.py
irc_ros_bringup/params/: sick_s300.yaml
irc_ros_controllers/: CMakeLists.txt  README.md  dashboard_controller.xml  dio_controller.xml  package.xml  platform_controller.xml  schmalz_ecbpmi_controller.xml
irc_ros_controllers/include/irc_ros_controllers/: dashboard_controller.hpp  dashboard_semantic_component_interface.hpp  dio_controller.hpp  platform_controller.hpp  schmalz_ecbpmi_controller.hpp
irc_ros_controllers/src/: dashboard_controller.cpp  dio_controller.cpp  platform_controller.cpp  schmalz_ecbpmi_controller.cpp
irc_ros_dashboard/: README.md  package.xml  setup.cfg  setup.py
irc_ros_dashboard/doc/: dashboard.drawio  dashboard_process.drawio
irc_ros_dashboard/irc_ros_dashboard/: cli_dashboard.py
irc_ros_description/: CMakeLists.txt  README.md  package.xml
irc_ros_description/doc/: urdf_structure.drawio
irc_ros_description/launch/: visualize.launch.py
irc_ros_description/meshes/cpr_platform_medium/: body.dae  bodyColl.dae  wheel.dae  wheelColl.dae
irc_ros_description/meshes/gripper_schmalz_ecbpmi/: Joint0.dae  Joint0Coll.dae
irc_ros_description/meshes/igus_rebel_4dof_00/: Joint0.dae  Joint0Coll.dae  Joint1.dae  Joint1Coll.dae  Joint2.dae  Joint2Coll.dae  Joint3.dae  Joint3Coll.dae  Joint4.dae  Joint4Coll.dae
irc_ros_description/meshes/igus_rebel_4dof_pre/: Joint0.dae  Joint0Coll.dae  Joint1.dae  Joint1Coll.dae  Joint2.dae  Joint2Coll.dae  Joint3.dae  Joint3Coll.dae  Joint4.dae  Joint4Coll.dae
irc_ros_description/meshes/igus_rebel_6dof_00/: Joint0.dae  Joint0Coll.dae  Joint1.dae  Joint1Coll.dae  Joint2.dae  Joint2Coll.dae  Joint3.dae  Joint3Coll.dae  Joint4.dae  Joint4Coll.dae  Joint5.dae  Joint5Coll.dae  Joint6Coll.dae
irc_ros_description/meshes/igus_rebel_6dof_pre/: Joint0.dae  Joint0Coll.dae  Joint1.dae  Joint1Coll.dae  Joint2.dae  Joint2Coll.dae  Joint3.dae  Joint3Coll.dae  Joint4.dae  Joint4Coll.dae  Joint5.dae  Joint5Coll.dae  Joint6.dae  Joint6Coll.dae
irc_ros_description/meshes/igus_robolink_rl_dp_5/: Joint0.dae  Joint1.dae  Joint1Coll.dae  Joint2.dae  Joint2Coll.dae  Joint3.dae  Joint3Coll.dae  Joint4.dae  Joint4Coll.dae  Joint5.dae  Joint5Coll.dae
irc_ros_description/rviz/: platform.rviz  rebel.rviz
irc_ros_description/urdf/: cpr_platform_medium.ros2_control.xacro  cpr_platform_medium.urdf.xacro  cpr_platform_medium.xacro  cpr_platform_mini.urdf.xacro  cpr_rebel_carrier.urdf.xacro  din_rail_module.ros2_control.xacro  gripper_ext_dio_gripper.ros2_control.xacro  gripper_ext_dio_gripper.urdf.xacro  gripper_ext_dio_gripper.xacro  gripper_none.urdf.xacro  gripper_schmalz_ecbpmi.urdf.xacro  igus_rebel_4dof.urdf.xacro  igus_rebel_4dof_00.ros2_control.xacro  igus_rebel_4dof_00.xacro  igus_rebel_4dof_01.ros2_control.xacro  igus_rebel_6dof.urdf.xacro  igus_rebel_6dof_00.ros2_control.xacro  igus_rebel_6dof_00.xacro  igus_rebel_6dof_01.ros2_control.xacro  igus_rebel_6dof_01.xacro  igus_rebel_6dof_pre.ros2_control.xacro  igus_rebel_6dof_pre.xacro  igus_robolink_rl_dp_5.ros2_control.xacro  igus_robolink_rl_dp_5.urdf.xacro  igus_robolink_rl_dp_5.xacro  rebel_joint.ros2_control.xacro  rebel_on_platform.urdf.xacro
irc_ros_description/urdf/grippers/: ext_dio_gripper.description.xacro  ext_dio_gripper.ros2_control.xacro  ext_dio_gripper.urdf.xacro  ext_dio_gripper.xacro  grippers.macro.xacro  none.urdf.xacro  schmalz_ecbpmi.description.xacro  (+1 more)
irc_ros_examples/: CMakeLists.txt  README.md  package.xml
irc_ros_examples/launch/: baristabot.launch.py  nav2_simple_commander_example.launch.py  pick_and_place.launch.py  pick_and_place_vacuum.launch.py
irc_ros_examples/scripts/: baristabot.py  nav2_simple_commander_example.py
irc_ros_examples/src/: keyboard_control.cpp  pick_and_place.cpp  pick_and_place_vacuum.cpp
irc_ros_hardware/: CMakeLists.txt  README.md  irc_ros_hardware.xml  package.xml
irc_ros_hardware/doc/: candump.txt  parse_candump.py
irc_ros_hardware/src/: irc_ros_can.cpp  irc_ros_cri.cpp
irc_ros_moveit_config/: CMakeLists.txt  README.md  package.xml
irc_ros_moveit_config/config/: controllers.yaml  igus_rebel_6dof.srdf  igus_rebel_6dof.srdf.xacro  igus_rebel_6dof.urdf.xacro  initial_positions.yaml  joint_limits.yaml  kinematics.yaml  moveit_controllers.yaml  moveit_py.yaml  ompl.yaml  pilz_cartesian_limits.yaml  ros2_controllers.yaml
irc_ros_moveit_config/launch/: rebel.launch.py
irc_ros_moveit_config/rviz/: moveit.rviz
irc_ros_msgs/: CMakeLists.txt  README.md  package.xml
irc_ros_msgs/msg/: CanModuleCommand.msg  CanModuleState.msg  CanModuleStates.msg  DioCommand.msg  DioIntCommand.msg  DioState.msg  DioStates.msg  GripperCommand.msg  GripperState.msg  JointVelocityCommand.msg
irc_ros_msgs/srv/: CanModuleCommand.srv  DioCommand.srv  GripperCommand.srv
irc_ros_navigation2/: CMakeLists.txt  README.md  package.xml
irc_ros_navigation2/launch/: cpr_platform.launch.py
irc_ros_navigation2/map/: map.pgm  map.yaml  map_office.pgm  map_office.yaml
irc_ros_navigation2/params/: cpr_platform_medium.yaml
irc_ros_navigation2/rviz/: platform.rviz
(+47 files in other folders)
