<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>irc_ros_examples</name>
  <version>0.1.0</version>
  <description>This package contains examples on how to use IRC ROS</description>

  <maintainer email="fer@cpr-robots.com">Felix Reuter</maintainer>
  <license>Apache-2.0</license>
  <url type="website">cpr-robots.com</url>
  <url type="repository">https://github.com/CommonplaceRobotics/iRC_ROS</url>
  <author email="fer@cpr-robots.com">Felix Reuter</author>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <depend>irc_ros_msgs</depend>
  <depend>irc_ros_moveit_config</depend>
  <depend>moveit_ros_planning_interface</depend>
  <depend>moveit_core</depend>
  <depend>moveit_msgs</depend>
  <depend>moveit_ros_move_group_interface</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>


  <build_depend>moveit_common</build_depend>
  <build_depend>moveit_ros_planning</build_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
