<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>irc_ros_msgs</name>
  <version>0.0.0</version>
  <description>This package contains the messages required for the interaction between other irc_ros packages</description>

  <maintainer email="fer@cpr-robots.com">Felix Reuter</maintainer>
  <license>Apache-2.0</license>
  <url type="website">cpr-robots.com</url>
  <url type="repository">https://github.com/CommonplaceRobotics/iRC_ROS</url>
  <author email="fer@cpr-robots.com">Felix Reuter</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <build_depend>rosidl_default_generators</build_depend>

  <exec_depend>rosidl_default_runtime</exec_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
