<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>irc_ros_navigation2</name>
  <version>0.1.0</version>
  <description>The irc_ros_navigation2 package</description>

  <maintainer email="fer@cpr-robots.com">Felix Reuter</maintainer>
  <license>Apache-2.0</license>
  <url type="website">cpr-robots.com</url>
  <url type="repository">https://github.com/CommonplaceRobotics/iRC_ROS</url>
  <author email="fer@cpr-robots.com">Felix Reuter</author>
 
  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
